[gd_scene load_steps=5 format=3 uid="uid://smart_enemy_001"]

[ext_resource type="Script" path="res://scripts/SmartEnemy.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://smart_drone_001" path="res://assets/smart_drone.png" id="2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(50, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 150.0

[node name="SmartEnemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1")
collision_layer = 2
collision_mask = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")
scale = Vector2(1.1, 1.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="WeaponPoint" type="Marker2D" parent="."]
position = Vector2(25, 0)

[node name="HealthBar" type="ProgressBar" parent="."]
position = Vector2(0, -30)
size = Vector2(50, 6)
max_value = 30.0
value = 30.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")